# music-bridge

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  go.mod  go.work
alpha/go/: go.mod
cmd/music-bridge/: main.go
internal/android/: android.go  android_connection.go  android_connection_test.go  android_emulator_harness_test.go  android_emulator_test.go  android_sync.go  android_sync_test.go  android_test.go  android_transfer.go  android_transfer_test.go  android_ui.go  android_ui_test.go  dependencies.go
internal/app/: log.go  log_test.go  sync.go  sync_test.go  ui.go
internal/bridge/: android.go  android_connection.go  android_connection_test.go  android_emulator_test.go  android_sync.go  android_sync_test.go  android_test.go  android_transfer.go  android_transfer_test.go  android_ui.go  android_ui_test.go  artwork.go  artwork_cache.go  artwork_cache_test.go  artwork_test.go  log.go  log_test.go  music.go  music_test.go  plan.go  plan_test.go  playlist.go  playlist_test.go  portable_path.go  portable_path_test.go  pure_logic_test.go  sync.go  sync_test.go  target.go  target_test.go  transfer.go  transfer_test.go  ui.go
internal/diagnostic/: logger.go  logger_test.go
internal/drive/: artwork.go  artwork_test.go  diagnostic.go  library_alias.go  music.go  plan.go  plan_test.go  (+10 more)
mvp/python/: README.md  pyproject.toml
mvp/python/music_bridge/: cli.py  models.py  source.py  sync.py  ui.py
mvp/python/scripts/: export_music_library.js
mvp/python/tests/: test_sync.py
scripts/: export_music_artwork.applescript  export_music_library.js
tools/: test.sh
(+25 files in other folders)
