[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "music-bridge"
version = "0.1.0"
description = "Sync local Music.app playlists to an Android microSD card"
requires-python = ">=3.10"

[project.scripts]
music-bridge = "music_bridge.cli:main"

[tool.setuptools.packages.find]
include = ["music_bridge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
